changed users table to have data about registration date to correctly calculate number of unpaid months and debt, implemented unit tests for calculating unpaid months and total debt