@@ -4,9 +4,11 @@ import com.karate.management.karatemanagementsystem.model.entity.PaymentEntity;
 import com.karate.management.karatemanagementsystem.model.entity.UserEntity;
 import com.karate.management.karatemanagementsystem.model.repository.PaymentRepository;
 import com.karate.management.karatemanagementsystem.model.repository.UserRepository;
+import com.karate.management.karatemanagementsystem.model.staticdata.PaymentStatus;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.time.YearMonth;
 import java.util.ArrayList;
 import java.util.List;
@@ -26,25 +28,32 @@ public class PaymentService {
 
     public List<YearMonth> getUnpaidMonthsForUser(UserEntity userDto) {
         YearMonth currentMonth = YearMonth.now();
+        LocalDate userRegistrationDate = userDto.getRegistrationDate();
+
         List<YearMonth> paidMonths = paymentRepository.findPaymentsByUserEntityUserId(userDto.getUserId()).stream()
+                .filter(payment -> payment.getPaymentStatus() == PaymentStatus.PAID)
                 .map(PaymentEntity::getPaymentDate)
                 .map(YearMonth::from)
-                .toList();
+                .collect(Collectors.toList());
 
+        return extractUnpaidMonths(currentMonth, paidMonths, userRegistrationDate);
+    }
+
+    private static List<YearMonth> extractUnpaidMonths(YearMonth currentMonth, List<YearMonth> paidMonths, LocalDate userRegistrationDate) {
         List<YearMonth> unpaidMonths = new ArrayList<>();
-        YearMonth startMonth = currentMonth.minusMonths(2);
-        YearMonth endMonth = currentMonth.plusMonths(1);
 
-        for (YearMonth month = startMonth; !month.isAfter(endMonth); month = month.plusMonths(1)) {
+        YearMonth registrationMonth = YearMonth.from(userRegistrationDate);
+
+        for (YearMonth month = registrationMonth; !month.isAfter(currentMonth); month = month.plusMonths(1)) {
             if (!paidMonths.contains(month)) {
                 unpaidMonths.add(month);
             }
         }
-
         return unpaidMonths;
     }
 
     public double calculateTotalDebt(UserEntity user) {
-        return getUnpaidMonthsForUser(user).size() * 150.00;
+        List<YearMonth> unpaidMonths = getUnpaidMonthsForUser(user);
+        return unpaidMonths.size() * 150.00;
     }
 }
